tests/ui/slice_of_pinned.stderr
error[E0277]: mutable slice of pinned type is not supported
 --> tests/ui/slice_of_pinned.rs:7:1
  |
7 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^ requires `Pinned: Unpin`
  |
  = help: the trait `SliceOfUnpin_Pinned` is not implemented for `&mut [Pinned]`
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
